--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -4,13 +4,256 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="dashboard.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<script src="https://cdn.jsdelivr.net/npm/@joeattardi/emoji-button@3.1.1/dist/index.min.js"></script>
 
 	<title>Dashboard</title>
+
+	<style>
+		body {
+			margin: 0;
+			font-family: "Poppins", sans-serif;
+			background-color: #000 !important;
+			color: #fff;
+		}
+
+		.outer {
+			display: flex;
+			height: 100vh;
+
+		}
+
+		.sidebar {
+			color: #fff !important;
+			background-color: #000;
+			width: 260px;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
+			padding: 2rem 1.5rem;
+			border: 1px solid #2f3336;
+			height: 100vh;
+
+		}
+
+		.brand {
+			color: #fff;
+			text-align: left;
+			margin-bottom: 2rem;
+		}
+
+		.sidebar ul {
+			list-style: none;
+			padding: 0;
+		}
+
+		.sidebar ul li {
+			display: flex;
+			align-items: center;
+			gap: 15px;
+			padding: 10px 0;
+			font-size: 1.2rem;
+			cursor: pointer;
+			transition: 0.3s;
+		}
+
+		.sidebar ul li:hover {
+			background-color: #16181c;
+			border-radius: 25px;
+			padding-left: 12px;
+			color: #1d9bf0;
+		}
+
+		.profile-section {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			background-color: #000;
+			border-radius: 50px;
+			padding: 10px;
+			margin-top: 20px;
+		}
+
+		.profile-pic {
+			background-color: #1d9bf0;
+			color: #fff;
+			width: 38px;
+			height: 38px;
+			border-radius: 50%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			font-weight: bold;
+		}
+
+		.username {
+			margin: 0;
+			font-weight: 600;
+		}
+
+		.handle {
+			margin: 0;
+			color: #71767b;
+			font-size: 0.9rem;
+		}
+
+		.content {
+			flex-grow: 1;
+			background-color: #000;
+			padding: 2rem;
+			border-left: 1px solid #2f3336;
+			border-right: 1px solid #2f3336;
+
+		}
+
+		.coin-img {
+			border-radius: 50%;
+			height: 40px;
+			width: 60px;
+			object-fit: cover;
+			box-shadow: 0 0 50px rgba(63, 121, 227, 0.9);
+		}
+
+
+		.for-you {
+			border: 1px solid #2f3336;
+			border-left: none;
+			width: 100%;
+		}
+
+		.content-2 {
+			flex-grow: 0.5;
+			border: 1px solid #2f3336;
+			background-color: #000;
+		}
+
+		#input {
+			background-color: rgba(0, 0, 0, 0.2);
+			padding: 10px;
+			width: 100%;
+			color: #fff;
+			font-size: 1.1rem;
+			outline: none;
+		}
+
+		.emojis {
+			color: #1d9bf0;
+			font-size: 20px;
+		}
+
+		.divide {
+			border-bottom: 1px solid #2f3336;
+			padding: 1 rem 0;
+		}
+
+		.divide .profile-section {
+			display: flex;
+			align-items: center;
+			gap: 15px;
+			background-color: transparent;
+			border-radius: 0;
+			padding: 0;
+			margin: 0;
+		}
+
+		.emojis {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			padding: 0.5rem 0;
+			color: #1d9bf0;
+			font-size: 20px;
+		}
+
+		.post {
+			background-color: #fff;
+			color: #000;
+			border: none;
+			border-radius: 50px;
+			font-weight: bold;
+			font-size: 1rem;
+			padding: 12px 0;
+			margin-top: 10px;
+			cursor: pointer;
+			width: 15%;
+			transition: 0.3s;
+		}
+
+		.search {
+			padding: 12px 0;
+			background-color: #000;
+			color: white;
+		}
+
+		.connect-img img {
+			margin-left: 1px;
+			width: 100%;
+			height: 300px;
+			object-fit: cover;
+			border-radius: 0;
+		}
+
+		#input {
+			width: 100%;
+			border: none;
+			outline: none;
+			resize: none;
+			background: transparent;
+			color: white;
+			font-size: 1rem;
+			overflow-wrap: break-word;
+		}
+
+		.post-card {
+			padding: 1rem;
+			border-bottom: 1px solid #2f3336;
+			color: white;
+		}
+
+		.post-text {
+			font-size: 1rem;
+			margin-top: 10px;
+			white-space: pre-wrap;
+		}
+
+		.action-buttons {
+			display: flex;
+			align-items: center;
+			gap: 2rem;
+			padding: 0.5rem 0;
+		}
+
+		.action-buttons button {
+			background: transparent;
+			color: white;
+			border: none;
+			font-size: 1.4rem;
+			cursor: pointer;
+			padding: 5px;
+			border-radius: 50%;
+			transition: 0.2s;
+		}
+
+		.action-buttons button:hover {
+			color: #1d9bf0;
+			background-color: rgba(29, 155, 240, 0.15);
+		}
+
+		.posted-img {
+			height: 200px;
+			width: 200px;
+		}
+
+		#image-preview img {
+			width: 200px;
+			height: auto;
+			border-radius: 12px;
+			margin-top: 10px;
+			border: 1px solid #2f3336;
+		}
+	</style>
 </head>
 
 <body>
@@ -129,13 +372,15 @@
 		postBtn.addEventListener("click", async () => {
 
 			const text = inputBox.value.trim();
-			if (text === "") {
+			if (text === "" && !selectedImage) {
 				alert("Type something first");
 				return;
 			}
 
+			const currentUser = JSON.parse(localStorage.getItem("currentUser"));
+
 			const postData = {
-				userId: 1,
+				userId: currentUser.id,
 				content: text,
 				imageUrl: selectedImage
 			};
@@ -165,6 +410,7 @@
 
 		/* Display Post Function */
 		function displayPost(post) {
+			const currentUser = JSON.parse(localStorage.getItem("currentUser"));
 
 			const postDiv = document.createElement("div");
 			postDiv.classList.add("post-card");
@@ -173,7 +419,7 @@
                 <div class="profile-section">
                     <div class="profile-pic">?</div>
                     <div>
-                        <p class="username">Guest</p>
+						<p class="username">${post.username || "Guest"}</p>
                         <p class="handle">@guest_user</p>
                     </div>
                 </div>
@@ -187,19 +433,40 @@
                     <button><i class='bx bx-heart'></i></button>
                     <button><i class='bx bx-chat'></i></button>
                     <button><i class='bx bx-share'></i></button>
+					
+					${post.userId === currentUser.id ? `<button onclick="deletePost(${post.id}, this)">Delete</button>` : ""}
                 </div>
             `;
 
 			postFeed.prepend(postDiv);
 		}
-		async function loadAllPosts() {
-			const res = await fetch("http://localhost:8080/api/posts/all");
-			const posts = await res.json();
 
-			posts.forEach(p => displayPost(p));
+        //delete post btn
+		async function deletePost(postId, btn) {  // pass the button element as btn
+			const confirmDelete = confirm("Delete this post?");
+			if (!confirmDelete) return;
+
+			try {
+				const res = await fetch(`http://localhost:8080/api/posts/${postId}`, {
+					method: "DELETE"
+				});
+
+				if (res.ok) {
+					// remove the specific post card from the feed
+					btn.closest(".post-card").remove();
+				} else {
+					alert("Failed to delete post");
+				}
+			} catch (error) {
+				console.error("Error deleting post:", error);
+				alert("Error deleting post");
+			}
 		}
 
+
 		loadAllPosts();
+		loadProfilePosts();
+
 
 	</script>
 
