--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,19 +4,162 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="/index.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
 	<title>Cryptoconnect</title>
+
+	<style>
+		body {
+			background-color: #000;
+			color: #e0e0e0;
+			font-family: "Poppins", sans-serif;
+		}
+
+		#crypto {
+			color: #00bfff;
+			/* glowing sky blue */
+			text-shadow: 0 0 8px #00bfff;
+			font-weight: 700;
+		}
+
+		.coin-img {
+			border-radius: 50%;
+			height: 40px;
+			width: 60px;
+			object-fit: cover;
+			box-shadow: 0 0 50px rgba(63, 121, 227, 0.9);
+			animation: glow 2s infinite;
+		}
+
+		@keyframes glow {
+			from {
+				box-shadow: 0 0 50px rgba(63, 121, 227, 0.9);
+			}
+
+			to {
+				box-shadow: 0 0 50px rgb(21, 80, 189);
+			}
+		}
+
+		.navbar-dark .navbar-nav .nav-link:hover {
+			color: blue !important;
+		}
+
+		.move-up {
+			transform: translateY(-50px);
+		}
+
+		.btn-back {
+			display: inline-block;
+			border: 2px solid black;
+			padding: 3px;
+			border-radius: 6px;
+			background-color: white;
+			color: black;
+			text-decoration: none;
+			text-align: center;
+			cursor: pointer;
+			transition: 0.3s;
+		}
+
+		.btn-back:hover {
+			background-color: black;
+			color: white;
+		}
+
+		.girl {
+			height: 250px;
+			width: 250px;
+			overflow: hidden;
+		}
+
+		.girl img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			animation: myanimation 2s ease-in-out infinite;
+		}
+
+		@keyframes myanimation {
+			0% {
+				transform: scale(1);
+			}
+
+			50% {
+				transform: scale(1.3);
+			}
+
+			100% {
+				transform: scale(1);
+			}
+		}
+
+		.questions {
+			height: 20px;
+			width: 100%;
+			background-color: #738fc3;
+		}
+
+		.btn-success {
+			background-color: #00bfff;
+			border: none;
+			font-weight: bold;
+			color: #000;
+			transition: 0.3s;
+			margin-top: 20px;
+		}
+
+		.btn-success:hover {
+			background-color: #007bff;
+			color: white;
+			box-shadow: 0 0 10px #00bfff;
+		}
+
+		#text {
+			background: radial-gradient(circle at top, #001f3f, #000);
+			text-align: center;
+			position: relative;
+			padding: 50px;
+			background-image: url("community.jpeg");
+		}
+
+		#text::before {
+			content: " ";
+			position: absolute;
+			inset: 0;
+			background-color: rgba(0, 0, 0, 0.6);
+			z-index: 1;
+		}
+
+		#text h2 {
+			color: #00bfff;
+			text-shadow: 0 0 10px #007bff;
+			font-weight: bold;
+		}
+
+		#text p {
+			color: #ccc;
+			max-width: 600px;
+			margin: auto;
+		}
+
+		#text h2,
+		#text p,
+		#text a {
+			position: relative;
+			z-index: 2;
+		}
+		
+	</style>
 </head>
 
 <body>
-
 	<div class="text-white " style="padding: 10px; background-color: #0B4D99; text-align: center;"> Join Our Crypto
 		Community</div>
 	<!-- Navbar -->
-	<nav class="navbar navbar-expand-lg navbar-dark px-4" id="header">
+	<nav class="navbar navbar-expand-lg navbar-dark px-4" id="header" style="background-color: white;">
 		<div class="container-fluid">
 			<!-- Logo + Title -->
 			<a class="navbar-brand fw-bold fs-3 d-flex align-content-between" href="#">
@@ -49,11 +192,11 @@
 
 
 	<div class="d-flex flex-column justify-content-center align-items-center min-vh-100" id="text">
-		<div class="girl">
-			<img src="crypto.png" alt="null" height="300px" width="300px">
-		</div>
+		<!-- <div class="girl">
+      <img src="crypto.png" alt="null" height="300px" width="300px">
+    </div> -->
 		<div class="text-center" style="color: white;">
-			<h2>Welcome to Cryptoconnect</h2>
+			<h2 style="color: white;">Welcome to Cryptoconnect</h2>
 			<p>
 				Join the ultimate community for crypto enthusiasts! Share, discuss, and stay updated on #BTC, #ETH, and
 				more.
