--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -151,7 +151,46 @@
 			position: relative;
 			z-index: 2;
 		}
-		
+
+		.glass-card {
+			background-color: rgba(255, 255, 255, 0.08);
+			border-radius: 16px;
+			padding: 40px;
+			max-width: 500px;
+			box-shadow: 0 0 40px rgba(28, 53, 61, 0.2);
+		}
+
+
+		.feature-box {
+			background: #050b14;
+			padding: 25px;
+			border-radius: 12px;
+			box-shadow: 0 0 20px rgba(0, 191, 255, 0.1);
+			transition: 0.3s;
+			color: wheat;
+
+			opacity: 0;
+			transform: translateY(20px);
+			animation: fadeUp 4s ease forwards;
+		}
+
+		.feature-box:hover {
+			transform: translateY(-8px);
+			box-shadow: 0 0 30px rgba(0, 191, 255, 0.3);
+		}
+
+
+		@keyframes fadeUp {
+			from {
+				opacity: 0;
+				transform: translateY(20px);
+			}
+
+			to {
+				opacity: 1;
+				transform: translateY(0);
+			}
+		}
 	</style>
 </head>
 
@@ -195,7 +234,7 @@
 		<!-- <div class="girl">
       <img src="crypto.png" alt="null" height="300px" width="300px">
     </div> -->
-		<div class="text-center" style="color: white;">
+		<div class="glass-card text-center" style="color: white;">
 			<h2 style="color: white;">Welcome to Cryptoconnect</h2>
 			<p>
 				Join the ultimate community for crypto enthusiasts! Share, discuss, and stay updated on #BTC, #ETH, and
@@ -206,6 +245,29 @@
 			</a>
 		</div>
 	</div>
+
+	<section class="container my-5">
+		<div class="row text-center g-4" style="background-color: #000;">
+			<div class="col-md-4">
+				<div class="feature-box">
+					<h5>🔒 Secure</h5>
+					<p>Blockchain-backed data integrity & safety.</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="feature-box">
+					<h5>💬 Community</h5>
+					<p>Connect with real crypto enthusiasts.</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="feature-box">
+					<h5>⚡ Fast</h5>
+					<p>Real-time discussions and updates.</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<!-- Bootstrap JS -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
