--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -10,7 +10,7 @@
 
 	<style>
 		body {
-			background-color: #000;
+			background-color: black;
 		}
 
 		img {
@@ -33,7 +33,26 @@
 			border-radius: 10px;
 			margin: 4rem auto;
 			background-color: #0B4D99;
+
+			opacity: 0;
+			transform: translateY(40px);
+			animation: fade 2s ease forwards;
+			box-shadow: 0 0 30px rgb(159, 85, 85);
 		}
+
+		@keyframes fade {
+			from {
+				opacity: 0;
+				transform: translateY(40px);
+			}
+
+			to {
+				opacity: 2;
+				transform: translateY(60px);
+			}
+		}
+
+
 
 		#or {
 			text-align: center;
@@ -56,8 +75,11 @@
 
 		<br>
 
+		<button id="google-signin" class="btn btn-success w-100 mb-3">
+			Sign Up with Google
+		</button>
 
-		<br>
+		<h5 id="or">or</h5>
 
 		<form id="signup-form">
 			<div class="mb-3">
@@ -74,27 +96,51 @@
 		</form>
 	</div>
 
+	<!-- Firebase v10 modular SDK -->
+	<script type="module">
 
+		import {initializeApp} from "https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js";
+		import {getAuth, createUserWithEmailAndPassword, GoogleAuthProvider, signInWithPopup} from "https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js";
 
+		const firebaseConfig = {
+			apiKey: "AIzaSyDhgN_5PkP2kWuhDdkbTeUQVe3mRWpAfZE",
+			authDomain: "cryptoconnect-1b77a.firebaseapp.com",
+			projectId: "cryptoconnect-1b77a",
+			storageBucket: "cryptoconnect-1b77a.appspot.com",
+			messagingSenderId: "806243033339",
+			appId: "1:806243033339:web:6fcbdd21435df92301505e"
+		};
 
-	<script>
+		const app = initializeApp(firebaseConfig);
+		const auth = getAuth(app);
 
-		document.getElementById("signup-form").addEventListener("submit", async (event) => {
+		// Google Sign-in
+		const googleBtn = document.getElementById("google-signin");
+		googleBtn.addEventListener("click", async () => {
+			const provider = new GoogleAuthProvider();
+			try {
+				const result = await signInWithPopup(auth, provider);
+				alert(`Welcome ${result.user.displayName}!`);
+				console.log(result.user);
+				window.location.href = "login.html";
+			} catch (error) {
+				alert(error.message);
+			}
+		});
+
+		// Email/password signup
+		const form = document.getElementById("signup-form");
+		form.addEventListener("submit", async (event) => {
 			event.preventDefault();
-
 			const email = document.getElementById("email").value;
 			const password = document.getElementById("password").value;
 
-			const response = await fetch("http://localhost:8080/api/auth/signup", {
-				method: "POST",
-				headers: {"Content-Type": "application/json"},
-				body: JSON.stringify({email, password}),
-			});
-
-			const data = await response.json();
-			alert(data.message);
-			if (data.message === "Signup successful!") {
-				window.location.href = "/login";
+			try {
+				const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+				alert("Signup successful!");
+				console.log(userCredential.user);
+			} catch (error) {
+				alert(error.message);
 			}
 		});
 	</script>
