--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -5,7 +5,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="index.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 	<title>login page</title>
 	<style>
@@ -113,9 +112,20 @@
 			const data = await res.json();
 			alert(data.message);
 
-			if (data.message === "Login successful!") {
+			if (data.userId) {
+				localStorage.setItem(
+					"currentUser",
+					JSON.stringify({
+						id: data.userId,
+						email: data.email
+					})
+				);
+
 				window.location.href = "dashboard.html";
+			} else {
+				alert(data.message);
 			}
+
 		});
 	</script>
 </body>
