--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -127,22 +127,40 @@
 				alert(error.message);
 			}
 		});
-
-		// Email/password signup
 		const form = document.getElementById("signup-form");
+
 		form.addEventListener("submit", async (event) => {
 			event.preventDefault();
-			const email = document.getElementById("email").value;
-			const password = document.getElementById("password").value;
+
+			const email = document.getElementById("email").value.trim();
+			const password = document.getElementById("password").value.trim();
+			const username = prompt("Enter your username"); // simple prompt for username
+
+			if (!email || !password || !username) {
+				alert("All fields are required!");
+				return;
+			}
 
 			try {
-				const userCredential = await createUserWithEmailAndPassword(auth, email, password);
-				alert("Signup successful!");
-				console.log(userCredential.user);
+				const res = await fetch("http://localhost:8080/api/auth/signup", {
+					method: "POST",
+					headers: {"Content-Type": "application/json"},
+					body: JSON.stringify({email, password, username})
+				});
+
+				const data = await res.json();
+				alert(data.message);
+
+				if (data.message === "Signup successful!") {
+					window.location.href = "login.html"; // redirect after signup
+				}
+
 			} catch (error) {
-				alert(error.message);
+				console.error("Signup error:", error);
+				alert("Signup failed! Check console for details.");
 			}
 		});
+
 	</script>
 </body>
 
