--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -93,41 +93,47 @@
 		</div>
 
 	</div>
-
 	<script>
 		document.getElementById("loginForm").addEventListener("submit", async (e) => {
 			e.preventDefault();
 
-			const loginData = {
-				email: document.getElementById("email").value,
-				password: document.getElementById("password").value
-			};
+			const email = document.getElementById("email").value.trim();
+			const password = document.getElementById("password").value.trim();
 
-			const res = await fetch("http://localhost:8080/api/auth/login", {
-				method: "POST",
-				headers: {"Content-Type": "application/json"},
-				body: JSON.stringify(loginData)
-			});
-
-			const data = await res.json();
-			alert(data.message);
-
-			if (data.userId) {
-				localStorage.setItem(
-					"currentUser",
-					JSON.stringify({
-						id: data.userId,
-						email: data.email
-					})
-				);
-
-				window.location.href = "dashboard.html";
-			} else {
-				alert(data.message);
+			if (!email || !password) {
+				alert("Email and password are required!");
+				return;
 			}
 
+			try {
+				const res = await fetch("http://localhost:8080/api/auth/login", {
+					method: "POST",
+					headers: {"Content-Type": "application/json"},
+					body: JSON.stringify({email, password})
+				});
+
+				const data = await res.json(); // always parse as JSON
+
+				if (res.ok && data.userId) {
+					localStorage.setItem("currentUser", JSON.stringify({
+						id: data.userId,
+						username: data.username,
+						email: data.email
+					}));
+					alert("Login successful!");
+					window.location.href = "dashboard.html";
+				} else {
+					alert(data.message || "Invalid credentials");
+				}
+			} catch (error) {
+				console.error(error);
+				alert("Login failed! Check console for details.");
+			}
 		});
+
 	</script>
+
+
 </body>
 
 </html>
