--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -5,24 +5,23 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CryptoConnect Profile</title>
+
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+
 	<style>
 		body {
 			background-color: #000;
 			color: #fff;
-			margin: 0;
 			font-family: "Poppins", sans-serif;
 		}
 
 		.outer {
-			display: flex;
 			height: 100vh;
 		}
 
 		.sidebar {
-			background-color: #000;
-			width: 260px;
+			background: #000;
 			border-right: 1px solid #2f3336;
 			padding: 2rem 1.5rem;
 		}
@@ -34,31 +33,25 @@
 
 		.sidebar ul li {
 			display: flex;
-			align-items: center;
 			gap: 10px;
-			padding: 10px 0;
+			padding: 10px;
 			cursor: pointer;
 			font-size: 1.1rem;
-			transition: 0.3s;
 		}
 
 		.sidebar ul li:hover {
-			background-color: #16181c;
+			background: #16181c;
 			border-radius: 20px;
-			padding-left: 12px;
 			color: #1d9bf0;
 		}
 
-		/* Profile Section */
 		.profile-header {
-			width: 100%;
 			border-bottom: 1px solid #2f3336;
 		}
 
 		.banner {
 			height: 180px;
-			background: url('banner.jpg') center/cover no-repeat;
-			background-color: #111;
+			background: #111;
 		}
 
 		.profile-info {
@@ -77,20 +70,6 @@
 			object-fit: cover;
 		}
 
-		.edit-profile-btn {
-			background: transparent;
-			border: 1px solid #2f3336;
-			color: #fff;
-			padding: 6px 16px;
-			border-radius: 20px;
-			float: right;
-			cursor: pointer;
-		}
-
-		.edit-profile-btn:hover {
-			background: rgba(255, 255, 255, 0.1);
-		}
-
 		.profile-name {
 			margin-top: 70px;
 			font-size: 1.4rem;
@@ -102,175 +81,173 @@
 		}
 
 		.profile-bio {
-			margin-top: 10px;
 			color: #ccc;
-		}
-
-		.follow-stats {
-			display: flex;
-			gap: 20px;
-			margin-top: 10px;
 		}
 
 		.tabs {
 			display: flex;
 			justify-content: space-around;
 			border-bottom: 1px solid #2f3336;
-			margin-top: 1rem;
 		}
 
-		.tabs div {
+		.tab {
 			padding: 12px;
 			cursor: pointer;
 		}
 
-		.tabs div:hover {
-			background-color: #16181c;
+		.tab:hover {
+			background: #16181c;
+		}
+
+		.tab.active {
+			border-bottom: 3px solid #1d9bf0;
+			color: #1d9bf0;
+			font-weight: 600;
 		}
 	</style>
 </head>
 
 <body>
+
 	<div class="container-fluid">
 		<div class="row outer">
 
 			<!-- Sidebar -->
 			<div class="col-md-3 sidebar d-none d-md-block">
-				<h2 class="brand"><img src="bitcoin.png.png" class="coin-img" style="width:60px; border-radius:50%">
-				</h2>
 				<ul>
-					<li onclick="window.location.href='dashboard.html'"><i class='bx bx-home'></i>Home</li>
+					<li onclick="location.href='dashboard.html'"><i class='bx bx-home'></i>Home</li>
 					<li><i class='bx bx-bell'></i>Notifications</li>
 					<li><i class='bx bx-user'></i>Profile</li>
 				</ul>
 			</div>
 
-			<!-- Profile Content -->
+			<!-- Profile -->
 			<div class="col-12 col-md-6"
-				style="border-left:1px solid #2f3336; border-right:1px solid #2f3336; padding:0;">
+				style="border-left:1px solid #2f3336; border-right:1px solid #2f3336; padding:0">
 
 				<div class="profile-header">
 					<div class="banner"></div>
 
 					<div class="profile-info">
 						<img src="profile.jpg" class="profile-dp">
-
-						<button class="edit-profile-btn">Edit Profile</button>
-
 						<h2 class="profile-name">Guest User</h2>
 						<p class="profile-handle">@guest_user</p>
-
 						<p class="profile-bio" id="displayBio">your bio here...</p>
-						<button class="editbtn" onclick="editBio()">Edit Bio</button>
-
-						<div id="editBioBox" style="display: none; margin-top: 10px;">
-							<textarea id="bioInput" rows="3" style="width:100%;"></textarea>
-							<button onclick="saveBio()">save</button>
-							<button onclick="cancelBio()">cancel</button>
-						</div>
-
-						<div class="follow-stats">
-							<span><strong>120</strong> Following</span>
-							<span><strong>245</strong> Followers</span>
-						</div>
 					</div>
 				</div>
 
 				<!-- Tabs -->
 				<div class="tabs">
-					<div>Tweets</div>
-					<div>Media</div>
-					<div>Likes</div>
+					<div class="tab active" onclick="switchTab('tweets')">Tweets</div>
+					<div class="tab" onclick="switchTab('media')">Media</div>
+					<div class="tab" onclick="switchTab('likes')">Likes</div>
 				</div>
 
-				<div id="user-posts" style="padding: 1rem;"></div>
-
-
+				<div id="user-posts" style="padding:1rem;"></div>
 			</div>
 
-			<!-- Right Section -->
-			<div class="col-md-3 d-none d-md-block" style="border-left:1px solid #2f3336; padding:1rem;">
-				<h4>CryptoConnect</h4>
-			</div>
+			<div class="col-md-3 d-none d-md-block"></div>
 		</div>
 	</div>
+
 	<script>
+		let allPosts = [];
+		let currentTab = "tweets";
 
-		function editBio() {
-			document.getElementById("editBioBox").style.display = "block";
-			document.getElementById("bioInput").value = document.getElementById("displayBio").innerText;
-		}
-		function saveBio() {
-			const newBio = document.getElementById("bioInput").value.trim();
-			document.getElementById("displayBio").innerText = newBio;
-			document.getElementById("editBioBox").style.display = "none";
-		}
-
-		function cancelBio() {
-			document.getElementById("editBioBox").style.display = "none";
-		}
-
-		// Fetch posts of this user from backend
 		async function loadUserPosts() {
 			const currentUser = JSON.parse(localStorage.getItem("currentUser"));
-			
-			if(!currentUser || !currentUser.id){
-				alert("please login first");
-				window.location.href = "login.html";
+
+			if (!currentUser || !currentUser.id) {
+				alert("Please login first");
+				location.href = "login.html";
+				return;
 			}
-			const userId = currentUser.id;
 
 			try {
-				const response = await fetch(`http://localhost:8080/api/posts/user/${userId}`);
-				const posts = await response.json();
-
-				const container = document.getElementById("user-posts");
-				container.innerHTML = ""; // clear old posts
-
-				posts.forEach(post => {
-					const postDiv = document.createElement("div");
-					postDiv.style.borderBottom = "1px solid #2f3336";
-					postDiv.style.padding = "15px";
-
-					postDiv.innerHTML = `
-		                <div style="display:flex; gap:10px;">
-		                    <div class="profile-pic"
-		                        style="width:40px; height:40px; border-radius:50%; background:#333; text-align:center; line-height:40px;">
-		                        ?
-		                    </div>
-		                    <div style="display:flex>
-		                        <p style="margin:0; font-weight:600;">Guest User</p>
-								<i class='bx bx-trash-alt'></i> 
-		                        <p style="margin:0; color:#777;">@guest_user</p>
-		                    </div>
-		                </div>
-
-		                <p style="margin-top:10px;">${post.content}</p>
-
-		                ${post.imageUrl
-							? `<img src="${post.imageUrl}" style="width:100%; border-radius:10px; margin-top:10px;">`
-							: ""}
-
-		                <div style="display:flex; gap:20px; margin-top:10px; font-size:1.2rem;">
-		                    <i class='bx bx-heart'></i>
-		                    <i class='bx bx-chat'></i>
-		                    <i class='bx bx-share'></i>
-		                </div>
-		            `;
-
-					container.appendChild(postDiv);
-				});
-
+				const res = await fetch(`http://localhost:8080/api/posts/user/${currentUser.id}`);
+				allPosts = await res.json();
+				renderPosts();
 			} catch (err) {
-				console.error("Error loading posts", err);
+				console.error(err);
 			}
 		}
 
-		// Load posts on page open
+		function renderPosts() {
+			const container = document.getElementById("user-posts");
+			container.innerHTML = "";
+
+			let filtered = [];
+
+			if (currentTab === "tweets") {
+				filtered = allPosts;
+			} else if (currentTab === "media") {
+				filtered = allPosts.filter(p => p.imageUrl);
+			}
+
+			if (filtered.length === 0) {
+				container.innerHTML = "<p style='color:#777'>No posts found</p>";
+				return;
+			}
+
+			const currentUser = JSON.parse(localStorage.getItem("currentUser"));
+
+			filtered.forEach(post => {
+				const div = document.createElement("div");
+				div.style.borderBottom = "1px solid #2f3336";
+				div.style.padding = "15px";
+
+				div.innerHTML = `
+				<div style="display:flex; justify-content:space-between;">
+					<div style="display:flex; gap:10px;">
+						<div style="width:40px;height:40px;border-radius:50%;background:#333;text-align:center;line-height:40px;">
+							${currentUser.username.charAt(0).toUpperCase()}
+						</div>
+						<div>
+							<p style="margin:0;font-weight:600">${currentUser.username}</p>
+							<p style="margin:0;color:#777">@${currentUser.username}</p>
+						</div>
+					</div>
+					<i class='bx bx-trash-alt' style="cursor:pointer;color:#ff4d4d"
+					   onclick="deletePost(${post.id})"></i>
+				</div>
+
+				<p style="margin-top:10px">${post.content}</p>
+
+				${post.imageUrl ? `<img src="${post.imageUrl}" style="width:100%;border-radius:10px">` : ""}
+
+				<div style="display:flex;gap:20px;margin-top:10px;font-size:1.2rem">
+					<i class='bx bx-heart'></i>
+					<i class='bx bx-chat'></i>
+					<i class='bx bx-share'></i>
+				</div>
+			`;
+
+				container.appendChild(div);
+			});
+		}
+
+		function switchTab(tab) {
+			currentTab = tab;
+			document.querySelectorAll(".tab").forEach(t => t.classList.remove("active"));
+			event.target.classList.add("active");
+			renderPosts();
+		}
+
+		async function deletePost(id) {
+			const currentUser = JSON.parse(localStorage.getItem("currentUser"));
+			if (!confirm("Delete this post?")) return;
+
+			const res = await fetch(`http://localhost:8080/api/posts/${id}/user/${currentUser.id}`, {
+				method: "DELETE"
+			});
+
+			if (res.ok) loadUserPosts();
+			else alert("Not allowed");
+		}
+
 		loadUserPosts();
-
-
 	</script>
+
 </body>
 
 </html>
