--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -2,109 +2,112 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>CryptoConnect Profile</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CryptoConnect Profile</title>
 
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+	rel="stylesheet">
+<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+	rel="stylesheet">
 
-	<style>
-		body {
-			background-color: #000;
-			color: #fff;
-			font-family: "Poppins", sans-serif;
-		}
+<style>
+body {
+	background-color: #000;
+	color: #fff;
+	font-family: "Poppins", sans-serif;
+}
 
-		.outer {
-			height: 100vh;
-		}
+.outer {
+	height: 100vh;
+}
 
-		.sidebar {
-			background: #000;
-			border-right: 1px solid #2f3336;
-			padding: 2rem 1.5rem;
-		}
+.sidebar {
+	background: #000;
+	border-right: 1px solid #2f3336;
+	padding: 2rem 1.5rem;
+}
 
-		.sidebar ul {
-			list-style: none;
-			padding: 0;
-		}
+.sidebar ul {
+	list-style: none;
+	padding: 0;
+}
 
-		.sidebar ul li {
-			display: flex;
-			gap: 10px;
-			padding: 10px;
-			cursor: pointer;
-			font-size: 1.1rem;
-		}
+.sidebar ul li {
+	display: flex;
+	gap: 10px;
+	padding: 10px;
+	cursor: pointer;
+	font-size: 1.1rem;
+}
 
-		.sidebar ul li:hover {
-			background: #16181c;
-			border-radius: 20px;
-			color: #1d9bf0;
-		}
+.sidebar ul li:hover {
+	background: #16181c;
+	border-radius: 20px;
+	color: #1d9bf0;
+}
 
-		.profile-header {
-			border-bottom: 1px solid #2f3336;
-		}
+.profile-header {
+	border-bottom: 1px solid #2f3336;
+}
 
-		.banner {
-			height: 180px;
-			background: #111;
-		}
+.banner {
+	height: 180px;
+	background: #111;
+}
 
-		.profile-info {
-			padding: 1rem;
-			position: relative;
-		}
+.profile-info {
+	padding: 1rem;
+	position: relative;
+}
 
-		.profile-dp {
-			width: 130px;
-			height: 130px;
-			border-radius: 50%;
-			border: 4px solid #000;
-			position: absolute;
-			top: -65px;
-			left: 1rem;
-			object-fit: cover;
-		}
+.profile-dp {
+	width: 130px;
+	height: 130px;
+	border-radius: 50%;
+	border: 4px solid #000;
+	position: absolute;
+	top: -65px;
+	left: 1rem;
+	object-fit: cover;
+}
 
-		.profile-name {
-			margin-top: 70px;
-			font-size: 1.4rem;
-			font-weight: 700;
-		}
+.profile-name {
+	margin-top: 70px;
+	font-size: 1.4rem;
+	font-weight: 700;
+}
 
-		.profile-handle {
-			color: #777;
-		}
+.profile-handle {
+	color: #777;
+}
 
-		.profile-bio {
-			color: #ccc;
-		}
+.profile-bio {
+	color: #ccc;
+}
 
-		.tabs {
-			display: flex;
-			justify-content: space-around;
-			border-bottom: 1px solid #2f3336;
-		}
+.tabs {
+	display: flex;
+	justify-content: space-around;
+	border-bottom: 1px solid #2f3336;
+}
 
-		.tab {
-			padding: 12px;
-			cursor: pointer;
-		}
+.tab {
+	padding: 12px;
+	cursor: pointer;
+}
 
-		.tab:hover {
-			background: #16181c;
-		}
+.tab:hover {
+	background: #16181c;
+}
 
-		.tab.active {
-			border-bottom: 3px solid #1d9bf0;
-			color: #1d9bf0;
-			font-weight: 600;
-		}
-	</style>
+.tab.active {
+	border-bottom: 3px solid #1d9bf0;
+	color: #1d9bf0;
+	font-weight: 600;
+}
+</style>
 </head>
 
 <body>
@@ -115,7 +118,8 @@
 			<!-- Sidebar -->
 			<div class="col-md-3 sidebar d-none d-md-block">
 				<ul>
-					<li onclick="location.href='dashboard.html'"><i class='bx bx-home'></i>Home</li>
+					<li onclick="location.href='dashboard.html'"><i
+						class='bx bx-home'></i>Home</li>
 					<li><i class='bx bx-bell'></i>Notifications</li>
 					<li><i class='bx bx-user'></i>Profile</li>
 				</ul>
@@ -123,15 +127,15 @@
 
 			<!-- Profile -->
 			<div class="col-12 col-md-6"
-				style="border-left:1px solid #2f3336; border-right:1px solid #2f3336; padding:0">
+				style="border-left: 1px solid #2f3336; border-right: 1px solid #2f3336; padding: 0">
 
 				<div class="profile-header">
 					<div class="banner"></div>
 
 					<div class="profile-info">
-						<img src="profile.jpg" class="profile-dp">
-						<h2 class="profile-name" id="profileName"></h2>
-						<p class="profile-handle" id="profileHandle"></p>
+						<img id="profileImg" class="profile-dp">
+						<h2 id="profileName"></h2>
+
 
 						<p class="profile-bio" id="displayBio"></p>
 
@@ -145,7 +149,7 @@
 					<div class="tab" onclick="switchTab('likes', this)">Likes</div>
 				</div>
 
-				<div id="user-posts" style="padding:1rem;"></div>
+				<div id="user-posts" style="padding: 1rem;"></div>
 			</div>
 
 			<div class="col-md-3 d-none d-md-block"></div>
@@ -165,8 +169,10 @@
 				location.href = "login.html";
 				return;
 			}
-			document.getElementById("profileName").innerHTML = currentUser.username;
-			document.getElementById("profileHandle").innerHTML = "@" + currentUser.username;
+			document.getElementById("profileName").innerText = currentUser.username;
+			document.getElementById("displayBio").innerText = currentUser.bio || "No bio yet";
+			document.getElementById("profileImg").src = currentUser.profileImage || "default.png";
+
 
 			try {
 				const res = await fetch(`http://localhost:8080/api/posts/user/${currentUser.id}`);
@@ -211,7 +217,7 @@
 						<div style="display:flex; gap:10px;">
 						
 							<div style="width:40px;height:40px;border-radius:50%;background:#333;text-align:center;line-height:40px;">
-							  ${post.username.charAt(0).toUpperCase()}
+							${(post.username || "U").charAt(0).toUpperCase()}
 							</div>
 							<div>
 							  <p style="margin:0;font-weight:600">${post.username}</p>
