--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -2,72 +2,70 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Signup</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Signup</title>
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-	<style>
-		body {
-			background-color: black;
-		}
+<style>
+body {
+	background-color: black;
+}
 
-		img {
-			height: 60px;
-			width: 60px;
-			border-radius: 50%;
-		}
+img {
+	height: 60px;
+	width: 60px;
+	border-radius: 50%;
+}
 
-		.logo {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-			margin-top: 1.5rem;
-		}
+.logo {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-top: 1.5rem;
+}
 
-		#form-container {
-			max-width: 400px;
-			padding: 2rem;
-			border-radius: 10px;
-			margin: 4rem auto;
-			background-color: #0B4D99;
+#form-container {
+	max-width: 400px;
+	padding: 2rem;
+	border-radius: 10px;
+	margin: 4rem auto;
+	background-color: #0B4D99;
+	opacity: 0;
+	transform: translateY(40px);
+	animation: fade 2s ease forwards;
+	box-shadow: 0 0 30px rgb(159, 85, 85);
+}
 
-			opacity: 0;
-			transform: translateY(40px);
-			animation: fade 2s ease forwards;
-			box-shadow: 0 0 30px rgb(159, 85, 85);
-		}
+@keyframes fade {from { opacity:0;
+	transform: translateY(40px);
+}
 
-		@keyframes fade {
-			from {
-				opacity: 0;
-				transform: translateY(40px);
-			}
+to {
+	opacity: 2;
+	transform: translateY(60px);
+}
 
-			to {
-				opacity: 2;
-				transform: translateY(60px);
-			}
-		}
+}
+#or {
+	text-align: center;
+	color: white;
+}
 
-
-
-		#or {
-			text-align: center;
-			color: white;
-		}
-
-		label {
-			color: white;
-		}
-	</style>
+label {
+	color: white;
+}
+</style>
 </head>
 
 <body>
 	<div id="form-container">
-		<a href="index.html" class="btn btn-light mb-3"><i class="fa-solid fa-arrow-left"></i> Go Back</a>
+		<a href="index.html" class="btn btn-light mb-3"><i
+			class="fa-solid fa-arrow-left"></i> Go Back</a>
 
 		<div class="logo">
 			<img src="bitcoin.png.png" alt="bitcoin" class="coin-img me-2">
@@ -76,23 +74,37 @@
 		<br>
 
 		<button id="google-signin" class="btn btn-success w-100 mb-3">
-			Sign Up with Google
-		</button>
+			Sign Up with Google</button>
 
 		<h5 id="or">or</h5>
 
 		<form id="signup-form">
 			<div class="mb-3">
-				<label for="email">Email</label>
-				<input type="email" id="email" placeholder="Enter your email" class="form-control" required>
+				<label for="email">Email</label> <input type="email" id="email"
+					placeholder="Enter your email" class="form-control" required>
 			</div>
 
 			<div class="mb-3">
-				<label for="password">Password</label>
-				<input type="password" id="password" placeholder="Enter your password" class="form-control" required>
+				<label for="password">Password</label> <input type="password"
+					id="password" placeholder="Enter your password"
+					class="form-control" required>
 			</div>
 
-			<button type="submit" class="btn btn-primary w-100 mt-2">Sign Up</button>
+			<div class="mb-3">
+				<label for="confirmPassword">Re-enter Password</label> <input
+					type="password" id="confirmPassword"
+					placeholder="Re-enter your password" class="form-control" required>
+			</div>
+
+
+			<div class="mb-3">
+				<label for="age">Age</label> <input type="number" id="age"
+					class="form-control" placeholder="Enter your age" required>
+			</div>
+
+
+			<button type="submit" class="btn btn-primary w-100 mt-2">Sign
+				Up</button>
 		</form>
 	</div>
 
@@ -129,37 +141,53 @@
 		});
 		const form = document.getElementById("signup-form");
 
-		form.addEventListener("submit", async (event) => {
-			event.preventDefault();
+form.addEventListener("submit", async (event) => {
+  event.preventDefault();
 
-			const email = document.getElementById("email").value.trim();
-			const password = document.getElementById("password").value.trim();
-			const username = prompt("Enter your username"); // simple prompt for username
+  const email = document.getElementById("email").value.trim();
+  const password = document.getElementById("password").value.trim();
+  const confirmPassword = document.getElementById("confirmPassword").value.trim();
+  const age = parseInt(document.getElementById("age").value);
 
-			if (!email || !password || !username) {
-				alert("All fields are required!");
-				return;
-			}
 
-			try {
-				const res = await fetch("http://localhost:8080/api/auth/signup", {
-					method: "POST",
-					headers: {"Content-Type": "application/json"},
-					body: JSON.stringify({email, password, username})
-				});
+  if (!email || !password || !age) {
+    alert("All fields are required!");
+    return;
+  }
 
-				const data = await res.json();
-				alert(data.message);
+  if (age < 18) {
+    alert("You must be 18+ to create an account");
+    return;
+  }
 
-				if (data.message === "Signup successful!") {
-					window.location.href = "login.html"; // redirect after signup
-				}
+if (password !== confirmPassword) {
+  alert("Passwords do not match");
+  return;
+}
 
-			} catch (error) {
-				console.error("Signup error:", error);
-				alert("Signup failed! Check console for details.");
-			}
-		});
+
+  try {
+    const res = await fetch("http://localhost:8080/api/auth/signup", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ email, password, age })
+    });
+
+    const data = await res.json();
+
+    if (data.message === "Signup successful!") {
+      localStorage.setItem("tempUserId", data.userId);
+      window.location.href = "profile-setup.html";
+    } else {
+      alert(data.message);
+    }
+
+  } catch (error) {
+    console.error("Signup error:", error);
+    alert("Signup failed! Check console for details.");
+  }
+});
+
 
 	</script>
 </body>
